@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ##
-##    Copyright (C) 2000-2001 Stefan Petersen (spe@stacken.kth.se)
+##    Copyright (C) 2000-2003 Stefan Petersen (spe@stacken.kth.se)
 ##
 ##  This file is part of gerbv.
 ##  $Id$
@@ -19,9 +19,9 @@
 ##  along with this program; if not, write to the Free Software
 ##  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA
 
-SUBDIRS = src man
+SUBDIRS = src man doc example 
 
 MOSTLYCLEANFILES = *~ *.o gerbv
 CLEANFILES = *~ *.o gerbv
-DISTCLEANFILES = *~ *.o gerbv Makefile stamp-h
-MAINTAINERCLEANFILES = *~ *.o gerbv Makefile config.* stamp-h stamp-h.in
+DISTCLEANFILES = *~ *.o gerbv Makefile stamp-h*
+MAINTAINERCLEANFILES = *~ *.o gerbv Makefile config.* stamp-h*
